src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cert_Sent_to_Printer__c</fullName>
        <description>Date the certificate print request was sent to the printer</description>
        <label>Date Certificate Sent to Printer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Certificate_Tracking_Number__c</fullName>
        <description>Tracking number from Courier for Certificate</description>
        <label>Certificate Courier Tracking Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complex_Cases_Received__c</fullName>
        <label>Complex Cases Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Conf_Workshop_1__c</fullName>
        <label>Conf Workshop 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CPD Points Uploaded</fullName>
                </value>
                <value>
                    <fullName>Did not attend</fullName>
                </value>
                <value>
                    <fullName>WaitList</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conf_Workshop_2__c</fullName>
        <label>Conf Workshop 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CPD Points Uploaded</fullName>
                </value>
                <value>
                    <fullName>Did not attend</fullName>
                </value>
                <value>
                    <fullName>WaitList</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conference_Dinner__c</fullName>
        <label>Conference Dinner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 Ticket</fullName>
                </value>
                <value>
                    <fullName>2 Tickets</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Copy_of_Professional_Requirement_3__c</fullName>
        <label>Copy of Professional Requirement 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>WEB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CouponCode__c</fullName>
        <label>CouponCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Code__c</fullName>
        <label>Course Code</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACDER</fullName>
                </value>
                <value>
                    <fullName>ADDER</fullName>
                </value>
                <value>
                    <fullName>ADERM</fullName>
                </value>
                <value>
                    <fullName>ADSGHN</fullName>
                </value>
                <value>
                    <fullName>ADSGNL</fullName>
                </value>
                <value>
                    <fullName>ADSUG</fullName>
                </value>
                <value>
                    <fullName>ASTH1</fullName>
                </value>
                <value>
                    <fullName>Business Course</fullName>
                </value>
                <value>
                    <fullName>CIM</fullName>
                </value>
                <value>
                    <fullName>CLATT</fullName>
                </value>
                <value>
                    <fullName>Conference 2010</fullName>
                </value>
                <value>
                    <fullName>Conference 2011</fullName>
                </value>
                <value>
                    <fullName>Conference 2012</fullName>
                </value>
                <value>
                    <fullName>conference 2013</fullName>
                </value>
                <value>
                    <fullName>CVD</fullName>
                </value>
                <value>
                    <fullName>DBTB</fullName>
                </value>
                <value>
                    <fullName>DELDIN</fullName>
                </value>
                <value>
                    <fullName>DIPDER</fullName>
                </value>
                <value>
                    <fullName>DPATH</fullName>
                </value>
                <value>
                    <fullName>GDERM</fullName>
                </value>
                <value>
                    <fullName>GPUPD</fullName>
                </value>
                <value>
                    <fullName>IM</fullName>
                </value>
                <value>
                    <fullName>MBMM</fullName>
                </value>
                <value>
                    <fullName>MCLAS</fullName>
                </value>
                <value>
                    <fullName>Monash PCOP</fullName>
                </value>
                <value>
                    <fullName>NICEUK</fullName>
                </value>
                <value>
                    <fullName>PCDER</fullName>
                </value>
                <value>
                    <fullName>PCOP</fullName>
                </value>
                <value>
                    <fullName>SCCONF</fullName>
                </value>
                <value>
                    <fullName>SCFOR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Course_Evaluation_Improvement__c</fullName>
        <description>NPS Evaluation comment as to one improvement for this course</description>
        <label>Course Evaluation - Improvement</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Course_Evaluation_NPS__c</fullName>
        <description>The NPS of the individual course</description>
        <label>Course Evaluation NPS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Course_Evaluation_Why_gave_this_score__c</fullName>
        <description>NPS comment of why attendee gave this score for the course</description>
        <label>Course Evaluation - Why gave this score</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Course_Prerequisites_Complete__c</fullName>
        <label>Course Prerequisites Complete</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Courses_Interested_In__c</fullName>
        <label>Courses Interested In</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACDER</fullName>
                </value>
                <value>
                    <fullName>ADERM</fullName>
                </value>
                <value>
                    <fullName>ADERM Online</fullName>
                </value>
                <value>
                    <fullName>ADSGHN</fullName>
                </value>
                <value>
                    <fullName>ADSGNL</fullName>
                </value>
                <value>
                    <fullName>ASTH1</fullName>
                </value>
                <value>
                    <fullName>CLATT</fullName>
                </value>
                <value>
                    <fullName>DIPDER</fullName>
                </value>
                <value>
                    <fullName>GDCERT</fullName>
                </value>
                <value>
                    <fullName>GDERM</fullName>
                </value>
                <value>
                    <fullName>GPUP</fullName>
                </value>
                <value>
                    <fullName>MEDBUS</fullName>
                </value>
                <value>
                    <fullName>PCDER</fullName>
                </value>
                <value>
                    <fullName>PCOP</fullName>
                </value>
                <value>
                    <fullName>SCCONF-2016</fullName>
                </value>
                <value>
                    <fullName>SCMAS</fullName>
                </value>
                <value>
                    <fullName>SCMED</fullName>
                </value>
                <value>
                    <fullName>SCMED Online</fullName>
                </value>
                <value>
                    <fullName>SCSUG</fullName>
                </value>
                <value>
                    <fullName>SCTIC</fullName>
                </value>
                <value>
                    <fullName>SKBUS</fullName>
                </value>
                <value>
                    <fullName>SKINBUS Online</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Created_by_Api__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox will be true if opportunity is created by api.</description>
        <label>Created by Api</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Assessment_Completed__c</fullName>
        <label>Date Requirements Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_CPD_Points_Submitted__c</fullName>
        <label>Date CPD Points Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Cancelled_or_Refunded__c</fullName>
        <description>This is the date that a refund or cancellation was processed. Does not affect transfers</description>
        <inlineHelpText>This is the date that a refund or cancellation was processed. Does not affect transfers</inlineHelpText>
        <label>Date Cancelled or Refunded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Healthcert_Cert_Sent__c</fullName>
        <label>Date Healthcert Cert Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Uni_Certificate_Sent__c</fullName>
        <label>Date Uni Certificate Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Diet_Requirements_for_Conference_dinner__c</fullName>
        <label>Diet Requirements for Conference dinner</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duplicate_Key__c</fullName>
        <label>Duplicate Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exam_1_Passed__c</fullName>
        <label>Exam 1 Passed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exam_2_Passed__c</fullName>
        <label>Exam 2 Passed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Extra_Delegate_1_Name__c</fullName>
        <label>Extra Delegate 1 Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extra_Delegate_1_Position__c</fullName>
        <label>Extra Delegate 1 Position</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Doctor</fullName>
                </value>
                <value>
                    <fullName>Other Administration Staff</fullName>
                </value>
                <value>
                    <fullName>Practice Manager</fullName>
                </value>
                <value>
                    <fullName>Practice Owner Doctor</fullName>
                </value>
                <value>
                    <fullName>Practice Owner non-Doctor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Extra_Delegate_2_Name__c</fullName>
        <label>Extra Delegate 2 Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extra_Delegate_2_Position__c</fullName>
        <label>Extra Delegate 2 Position</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Other Administration Staff</fullName>
                </value>
                <value>
                    <fullName>Practice Owner Doctor</fullName>
                </value>
                <value>
                    <fullName>Doctor</fullName>
                </value>
                <value>
                    <fullName>Practice Manager</fullName>
                </value>
                <value>
                    <fullName>Practice Owner non-Doctor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Extra_Delegate_3_Name__c</fullName>
        <label>Extra Delegate 3 Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extra_Delegate_3_Position__c</fullName>
        <label>Extra Delegate 3 Position</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Doctor</fullName>
                </value>
                <value>
                    <fullName>Practice Manager</fullName>
                </value>
                <value>
                    <fullName>Practice Owner Doctor</fullName>
                </value>
                <value>
                    <fullName>Practice Owner non-Doctor</fullName>
                </value>
                <value>
                    <fullName>Other Administration Staff</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Focus_Group__c</fullName>
        <label>Focus Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Free_Of_Charge_Reason__c</fullName>
        <description>The reason they were given an FOC for this course</description>
        <label>Free Of Charge Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dermoscopy Scholarship</fullName>
                </value>
                <value>
                    <fullName>Doctor for Development</fullName>
                </value>
                <value>
                    <fullName>Make Good for Poor Eval</fullName>
                </value>
                <value>
                    <fullName>NSCC Doctor</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>PE Request</fullName>
                </value>
                <value>
                    <fullName>Course Transfer</fullName>
                </value>
                <value>
                    <fullName>Sonic Pathology</fullName>
                </value>
                <value>
                    <fullName>Bundle with other course</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HC_Leader__c</fullName>
        <description>The HealthCert Education Adviser who is the Leader for this opportunity and receives recognition for the sale.</description>
        <inlineHelpText>The HealthCert Education Adviser who is the Leader for this opportunity and receives recognition for the sale.</inlineHelpText>
        <label>HC Leader</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AMBER</fullName>
                </value>
                <value>
                    <fullName>CAMPBELL</fullName>
                </value>
                <value>
                    <fullName>DON</fullName>
                </value>
                <value>
                    <fullName>MASTER</fullName>
                    <default>true</default>
                    <label>MASTER</label>
                </value>
                <value>
                    <fullName>OWEN</fullName>
                </value>
                <value>
                    <fullName>RICHARD</fullName>
                </value>
                <value>
                    <fullName>LUCY</fullName>
                </value>
                <value>
                    <fullName>LORETTA</fullName>
                </value>
                <value>
                    <fullName>ADELINA</fullName>
                    <isActive>false</isActive>
                    <label>ADELINA</label>
                </value>
                <value>
                    <fullName>ADMIN</fullName>
                    <isActive>false</isActive>
                    <label>ADMIN</label>
                </value>
                <value>
                    <fullName>AURELIO</fullName>
                    <isActive>false</isActive>
                    <label>AURELIO</label>
                </value>
                <value>
                    <fullName>Automated Process</fullName>
                    <isActive>false</isActive>
                    <label>Automated Process</label>
                </value>
                <value>
                    <fullName>BOYD</fullName>
                    <isActive>false</isActive>
                    <label>BOYD</label>
                </value>
                <value>
                    <fullName>CHRISW</fullName>
                    <isActive>false</isActive>
                    <label>CHRISW</label>
                </value>
                <value>
                    <fullName>Campbell Elton</fullName>
                    <isActive>false</isActive>
                    <label>Campbell Elton</label>
                </value>
                <value>
                    <fullName>Chatter Expert</fullName>
                    <isActive>false</isActive>
                    <label>Chatter Expert</label>
                </value>
                <value>
                    <fullName>Chris Watt</fullName>
                    <isActive>false</isActive>
                    <label>Chris Watt</label>
                </value>
                <value>
                    <fullName>DARREN</fullName>
                    <isActive>false</isActive>
                    <label>DARREN</label>
                </value>
                <value>
                    <fullName>DM User</fullName>
                    <isActive>false</isActive>
                    <label>DM User</label>
                </value>
                <value>
                    <fullName>EMMA</fullName>
                    <isActive>false</isActive>
                    <label>EMMA</label>
                </value>
                <value>
                    <fullName>Emma Kipping</fullName>
                    <isActive>false</isActive>
                    <label>Emma Kipping</label>
                </value>
                <value>
                    <fullName>Hamish Elton</fullName>
                    <isActive>false</isActive>
                    <label>Hamish Elton</label>
                </value>
                <value>
                    <fullName>JACKIE</fullName>
                    <isActive>false</isActive>
                    <label>JACKIE</label>
                </value>
                <value>
                    <fullName>JAN</fullName>
                    <isActive>false</isActive>
                    <label>JAN</label>
                </value>
                <value>
                    <fullName>JEREMY</fullName>
                    <isActive>false</isActive>
                    <label>JEREMY</label>
                </value>
                <value>
                    <fullName>Jackie Lyn Delfin-Anapio</fullName>
                    <isActive>false</isActive>
                    <label>Jackie Lyn Delfin-Anapio</label>
                </value>
                <value>
                    <fullName>Kingsford Todd</fullName>
                    <isActive>false</isActive>
                    <label>Kingsford Todd</label>
                </value>
                <value>
                    <fullName>LEISA</fullName>
                    <isActive>false</isActive>
                    <label>LEISA</label>
                </value>
                <value>
                    <fullName>Leisa Feeze-Collins</fullName>
                    <isActive>false</isActive>
                    <label>Leisa Feeze-Collins</label>
                </value>
                <value>
                    <fullName>Loretta Blackborough</fullName>
                    <isActive>false</isActive>
                    <label>Loretta Blackborough</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1. Not suitable date and / or location</fullName>
                </value>
                <value>
                    <fullName>1.1 Travelling or Annual Leave</fullName>
                </value>
                <value>
                    <fullName>1.2 Have another conference or event</fullName>
                </value>
                <value>
                    <fullName>1.3 Can&apos;t get time off</fullName>
                </value>
                <value>
                    <fullName>1.4 Do not want to travel</fullName>
                </value>
                <value>
                    <fullName>1.5 Waiting to complete exams</fullName>
                </value>
                <value>
                    <fullName>1.6 International Doctor</fullName>
                </value>
                <value>
                    <fullName>1.7 Family Commitment</fullName>
                </value>
                <value>
                    <fullName>2. Enrolled in other HCI course or switched course</fullName>
                </value>
                <value>
                    <fullName>3. Just looking</fullName>
                </value>
                <value>
                    <fullName>3.1 Start with other HCI Course</fullName>
                </value>
                <value>
                    <fullName>3.2 Experience is above this level</fullName>
                </value>
                <value>
                    <fullName>3.3 Level of outcome not as expected</fullName>
                </value>
                <value>
                    <fullName>3.4 Waiting for new Triennium</fullName>
                </value>
                <value>
                    <fullName>4. Prefer Other Learning Method</fullName>
                </value>
                <value>
                    <fullName>5. Too expensive</fullName>
                </value>
                <value>
                    <fullName>6. Course Full</fullName>
                </value>
                <value>
                    <fullName>7. Unable to contact</fullName>
                </value>
                <value>
                    <fullName>8. Past the course date</fullName>
                </value>
                <value>
                    <fullName>9. Not Enough Capacity to Call</fullName>
                </value>
                <value>
                    <fullName>Testing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marker_Paid__c</fullName>
        <label>Marker Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Name_of_marker_assigned__c</fullName>
        <label>Name of marker assigned</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Colin Armstrong</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Delegates__c</fullName>
        <label>Number of Delegates</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OppStatus__c</fullName>
        <label>OppStatus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EnrolmentCompleted</fullName>
                </value>
                <value>
                    <fullName>CreditCardSelected</fullName>
                    <label>Credit Card</label>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>DirectDeposit</fullName>
                </value>
                <value>
                    <fullName>Free of Charge</fullName>
                </value>
                <value>
                    <fullName>Waitlist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Status__c</fullName>
        <label>Opportunity Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Change Required</fullName>
                </value>
                <value>
                    <fullName>Product Not Found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_UTM__c</fullName>
        <label>Opportunity UTM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oppty_ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>Oppty ExternalId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pack_Sent_Date__c</fullName>
        <label>Pack Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pack_Tracking_Number__c</fullName>
        <description>Pack tracking number from courier</description>
        <label>Pack Tracking Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartnerMarketing__c</fullName>
        <label>PartnerMarketing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cheque</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
                <value>
                    <fullName>Direct Debit</fullName>
                </value>
                <value>
                    <fullName>Direct Deposit</fullName>
                </value>
                <value>
                    <fullName>Free of Charge</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>AMEX</fullName>
                    <isActive>false</isActive>
                    <label>AMEX</label>
                </value>
                <value>
                    <fullName>American Express</fullName>
                    <isActive>false</isActive>
                    <label>American Express</label>
                </value>
                <value>
                    <fullName>Corporate Account</fullName>
                    <isActive>false</isActive>
                    <label>Corporate Account</label>
                </value>
                <value>
                    <fullName>Paid in Full</fullName>
                    <isActive>false</isActive>
                    <label>Paid in Full</label>
                </value>
                <value>
                    <fullName>Payment via Credit Card</fullName>
                    <isActive>false</isActive>
                    <label>Payment via Credit Card</label>
                </value>
                <value>
                    <fullName>Payment via Direct Deposit</fullName>
                    <isActive>false</isActive>
                    <label>Payment via Direct Deposit</label>
                </value>
                <value>
                    <fullName>UQ Masters Account</fullName>
                    <isActive>false</isActive>
                    <label>UQ Masters Account</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <label>Payment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Free of Charge</fullName>
                </value>
                <value>
                    <fullName>NotPaid</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Unpaid</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                    <isActive>false</isActive>
                    <label>Pending</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Post_Course_Activity_Complete__c</fullName>
        <label>Post-Course Activity Complete</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Post_Course_Reflective_Activity_2__c</fullName>
        <label>Post Course Reflective Activity # 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>